@@ -1,4 +1,4 @@
-KAppTemplate v0.3.1
+KAppTemplate v0.3.2
 Kurt Granroth <granroth@kde.org>
 ----------------------------------------------------------------------
 
