@@ -1,7 +1,7 @@
 Begin3
 Title:          KAppTemplate
-Version:        0.3.1
-Entered-date:   18JAN99
+Version:        0.3.2
+Entered-date:   24JAN99
 Description:    Shell script that will automatically create a KTMainWindow-
                 based KDE app framework with user input.
 Keywords:       KDE 
